[tool.poetry]
name = "abc-ann-py"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"
packages = [{include = "src/*.py"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
